--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Git VSCODE</title>
 </head>
 <body>
+
+
+    <!--div contenedor 1-->
+    <div class="container">
+        <div class="row">
+            <p>Lorem ipsum dolor, sit consectetur adipisicing elit. Reiciendis, ex.</p>
+        </div>
+    </div>
+
+
+
+
     
 </body>
 </html>
